--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: swift
+language: objective-c
 osx_image: xcode7.2
 xcode_project: Typesetter.xcodeproj
 
@@ -11,8 +11,7 @@ env:
       - DESTINATION="OS=8.4,name=iPhone 6"
       - DESTINATION="OS=8.4,name=iPad Air"
 
-script:
-  - bin/test
+script: ./bin/test
 
 notifications:
     email: true
