There is no such thing as an iPad Air Pro

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
       - DESTINATION="OS=9.2,name=iPad 2"
       - DESTINATION="OS=9.2,name=iPad Air"
       - DESTINATION="OS=9.2,name=iPad Air 2"
-      - DESTINATION="OS=9.2,name=iPad Air Pro"
+      - DESTINATION="OS=9.2,name=iPad Pro"
       - DESTINATION="OS=9.2,name=iPad Retina"
       - DESTINATION="OS=9.2,name=iPhone 4s"
       - DESTINATION="OS=9.2,name=iPhone 5"
@@ -19,7 +19,7 @@ env:
       - DESTINATION="OS=9.1,name=iPad 2"
       - DESTINATION="OS=9.1,name=iPad Air"
       - DESTINATION="OS=9.1,name=iPad Air 2"
-      - DESTINATION="OS=9.1,name=iPad Air Pro"
+      - DESTINATION="OS=9.1,name=iPad Pro"
       - DESTINATION="OS=9.1,name=iPad Retina"
       - DESTINATION="OS=9.1,name=iPhone 4s"
       - DESTINATION="OS=9.1,name=iPhone 5"
@@ -31,7 +31,7 @@ env:
       - DESTINATION="OS=9.0,name=iPad 2"
       - DESTINATION="OS=9.0,name=iPad Air"
       - DESTINATION="OS=9.0,name=iPad Air 2"
-      - DESTINATION="OS=9.0,name=iPad Air Pro"
+      - DESTINATION="OS=9.0,name=iPad Pro"
       - DESTINATION="OS=9.0,name=iPad Retina"
       - DESTINATION="OS=9.0,name=iPhone 4s"
       - DESTINATION="OS=9.0,name=iPhone 5"
