--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: objective-c
 osx_image: xcode7.2
 xcode_project: Typesetter.xcodeproj
 
+branches:
+  only:
+    - master
+
 env:
   matrix:
       - DESTINATION="OS=9.2,name=iPad 2"
