--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,18 @@ env:
       - DESTINATION="OS=9.2,name=iPhone 6s"
       - DESTINATION="OS=9.2,name=iPhone 6 Plus"
       - DESTINATION="OS=9.2,name=iPhone 6s Plus"
+      - DESTINATION="OS=9.3,name=iPad 2"
+      - DESTINATION="OS=9.3,name=iPad Air"
+      - DESTINATION="OS=9.3,name=iPad Air 2"
+      - DESTINATION="OS=9.3,name=iPad Pro"
+      - DESTINATION="OS=9.3,name=iPad Retina"
+      - DESTINATION="OS=9.3,name=iPhone 4s"
+      - DESTINATION="OS=9.3,name=iPhone 5"
+      - DESTINATION="OS=9.3,name=iPhone 5s"
+      - DESTINATION="OS=9.3,name=iPhone 6"
+      - DESTINATION="OS=9.3,name=iPhone 6s"
+      - DESTINATION="OS=9.3,name=iPhone 6 Plus"
+      - DESTINATION="OS=9.3,name=iPhone 6s Plus"
 
 before_script:
   - carthage update --platform iOS --no-use-binaries
