--- a/.travis.yml
+++ b/.travis.yml
@@ -32,18 +32,18 @@ env:
       - DESTINATION="OS=9.3,name=iPhone 6s"
       - DESTINATION="OS=9.3,name=iPhone 6 Plus"
       - DESTINATION="OS=9.3,name=iPhone 6s Plus"
-      - DESTINATION="OS=10.0,name=iPad 2"
       - DESTINATION="OS=10.0,name=iPad Air"
       - DESTINATION="OS=10.0,name=iPad Air 2"
-      - DESTINATION="OS=10.0,name=iPad Pro"
       - DESTINATION="OS=10.0,name=iPad Retina"
-      - DESTINATION="OS=10.0,name=iPhone 4s"
       - DESTINATION="OS=10.0,name=iPhone 5"
       - DESTINATION="OS=10.0,name=iPhone 5s"
       - DESTINATION="OS=10.0,name=iPhone 6"
       - DESTINATION="OS=10.0,name=iPhone 6s"
       - DESTINATION="OS=10.0,name=iPhone 6 Plus"
       - DESTINATION="OS=10.0,name=iPhone 6s Plus"
+      - DESTINATION="OS=10.0,name=iPhone 6SE"
+      - DESTINATION="OS=10.0,name=iPhone 7"
+      - DESTINATION="OS=10.0,name=iPhone 7 Plus"
 
 before_script:
   - carthage update --platform iOS --no-use-binaries
